--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 /* Should style box that holds picture, but IDK*/
 .box {
-  height: 100;
-  width: 100;
-  padding: 20;
-  margin: 50;
-  border: 10 solid black;
+  height: 100px;
+  width: 400px;
+  padding: 20px;
+  margin: 50px;
+  border: 10px solid rgb(170, 187, 251);
+  background-color: pink;
 }
 
 .top_header {
